--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "vue-datepicker-simple",
-    "version": "1.0.0",
-    "description": "一个非常简单的基于vue的日期选择插件",
+    "version": "1.0.1",
+    "description": "一款非常简单的基于vue的日期选择插件",
     "main": "datepicker.vue",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
@@ -21,5 +21,41 @@
     "bugs": {
         "url": "https://github.com/dai-siki/vue-datepicker-simple/issues"
     },
-    "homepage": "https://github.com/dai-siki/vue-datepicker-simple#readme"
+    "homepage": "https://github.com/dai-siki/vue-datepicker-simple#readme",
+    "dependencies": {
+        "string.prototype.padstart": "^3.0.0"
+    },
+    "devDependencies": {
+        "babel": "^6.5.2",
+        "babel-core": "^6.17.0",
+        "babel-loader": "^6.2.5",
+        "babel-plugin-transform-runtime": "^6.15.0",
+        "babel-polyfill": "^6.16.0",
+        "babel-preset-es2015": "^6.16.0",
+        "babel-preset-stage-3": "^6.17.0",
+        "browser-sync": "^2.13.0",
+        "classnames": "^2.2.5",
+        "css-loader": "^0.23.1",
+        "gulp": "^3.8.8",
+        "gulp-plumber": "^1.1.0",
+        "gulp-changed": "^1.3.0",
+        "gulp-load-plugins": "^1.2.4",
+        "gulp-clean": "^0.3.2",
+        "gulp-clean-css": "^2.0.8",
+        "gulp-util": "^3.0.7",
+        "gulp-watch": "^4.3.6",
+        "gulp.spritesmith": "^6.2.1",
+        "sass-loader": "^4.0.0",
+        "node-sass": "^3.8.0",
+        "scss": "^0.2.4",
+        "scss-loader": "^0.0.1",
+        "style-loader": "^0.13.1",
+        "vinyl-named": "^1.1.0",
+        "vue": "^1.0.28",
+        "vue-loader": "^8.5.4",
+        "vue-style-loader": "^1.0.0",
+        "vue-html-loader": "^1.2.3",
+        "webpack": "^1.13.1",
+        "webpack-stream": "^3.2.0"
+    }
 }
