--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-datepicker-simple",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "一款非常简单的基于vue的日期选择插件",
   "main": "datepicker.vue",
   "scripts": {
@@ -34,6 +34,7 @@
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-stage-2": "^6.17.0",
     "babel-preset-stage-3": "^6.17.0",
+    "babel-runtime": "^6.11.6",
     "browser-sync": "^2.13.0",
     "classnames": "^2.2.5",
     "css-loader": "^0.23.1",
