--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "gulp-clean-css": "^2.0.8",
     "gulp-load-plugins": "^1.2.4",
     "gulp-plumber": "^1.1.0",
+    "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.7",
     "gulp-watch": "^4.3.6",
     "gulp.spritesmith": "^6.2.1",
