--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-datepicker-simple",
-  "version": "1.3.1",
+  "version": "1.4.0",
   "description": "一款非常简单的基于vue的日期选择插件",
   "main": "datepicker.vue",
   "scripts": {
@@ -14,7 +14,8 @@
     "vue",
     "datepicker",
     "vue-datepicker",
-    "vue-datepicker-simple"
+    "vue-calendar",
+    "calendar"
   ],
   "author": "dai-siki",
   "license": "ISC",
@@ -23,7 +24,7 @@
   },
   "homepage": "https://github.com/dai-siki/vue-datepicker-simple#readme",
   "dependencies": {
-      "babel-runtime": "^6.11.6"
+    "babel-runtime": "^6.11.6"
   },
   "devDependencies": {
     "babel": "^6.5.2",
@@ -47,6 +48,7 @@
     "gulp-util": "^3.0.7",
     "gulp-watch": "^4.3.6",
     "gulp.spritesmith": "^6.2.1",
+    "html-webpack-plugin": "^2.22.0",
     "node-sass": "^3.8.0",
     "sass-loader": "^4.0.0",
     "scss": "^0.2.4",
