--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-datepicker-simple",
-  "version": "1.4.7",
+  "version": "1.5.0",
   "description": "一款非常简单的基于vue的日期选择插件",
   "main": "datepicker.vue",
   "scripts": {
@@ -17,7 +17,9 @@
     "date-picker",
     "vue-date-picker",
     "vue-calendar",
-    "calendar"
+    "calendar",
+    "日历",
+    "日期选择"
   ],
   "author": "dai-siki",
   "license": "ISC",
